# drf-case-middleware

./: Makefile  pyproject.toml
demo/: manage.py
demo/demo/: settings.py  urls.py  views.py
demo/demo/templates/: index.html
drf_case_middleware/: parsers.py
