[tool.poetry]
name = "drf-case-middleware"
version = "0.1.0"
description = "camel to snake and snake to camel in django-rest-framework"
authors = ["punkyoon <punkkid001@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
pyhumps = "^1.3.1"
djangorestframework = "^3.11.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
